# GraphicsLib

./: .gitignore  LICENSE  README.md  REORGANIZATION.md  pyproject.toml
.github/instructions/: python.instructions.md
examples/: README.md  basic_usage.py  custom_palette.py  dash_scatter_demo.py  dash_scatter_with_plots.py  plotly_scatter_basic.py  plotly_scatter_demo.py  scatter_demo.py  scatter_usage.py  subplots_example.py
graphics_lib/: __init__.py  colours.py  palettes.py  plots.py  typography.py
graphics_lib/backends/: __init__.py  matplotlib.py  plotly.py
graphics_lib/core/: __init__.py  base.py  registry.py
graphics_lib/plots/: __init__.py
graphics_lib/plots/matplotlib/: __init__.py  fit.py  line.py  scatter.py
graphics_lib/plots/plotly/: __init__.py  dash_scatter.py  scatter.py
graphics_lib/utils/: __init__.py  color_helpers.py
tests/: __init__.py  test_placeholder.py  test_scatter.py
